Revision history for {{$dist->name}}

{{$NEXT}}

v0.1.3    2014-10-14 08:17:26-04:00 America/New_York
    - Use Alien::patch for systems that don't provide patch

v0.1.2    2014-10-09 05:22:06-04:00 America/New_York
    - Fixed regression on some non-windows platforms where patch
      does not support --binary option

v0.1.1    2014-10-08 13:55:47-04:00 America/New_York
    - Better Windows support
    - Support for Perl 5.8.x

v0.1.0    2014-09-25 22:05:02-05:00 America/Chicago
    - Improved reliability of LibYAML build process (thanks Graham Ollis)

v0.0.7    2014-03-30 14:14:19CDT-0500 America/Chicago
    - Bumped version of libyaml from 0.1.5 to 0.1.6 following a security alert, found at http://www.ocert.org/advisories/ocert-2014-003.html (tokuhirom++).

v0.0.6    2014-03-21 13:06:39-05:00 America/Chicago
    - Changed download location to official location.
    - Increased minimum version requirement of Alien::Base::ModuleBuild from
      0.003 to 0.004.

v0.0.5    2013-02-19 20:13:48 America/Chicago
    - Add config requirement (Alien::Base::ModuleBuild)

v0.0.4    2013-02-19 17:59:49 America/Chicago
    - Changed Build.PL to download archive from github repository.

v0.0.3    2013-02-19 16:23:29 America/Chicago
    - Fixed synopsis in POD.

v0.0.2    2013-02-19 14:56:53 America/Chicago
    - Fixed module name in POD.
    - Promoted to full release.

v0.0.1    2013-02-19 03:39:00 America/Chicago
    - First version, released on an unsuspecting world.